# fetch

./: .directory  .gitignore  .travis.yml  Cargo.toml  Justfile  README.md  travis.yml
fetch/: Cargo.toml
fetch/src/: main.rs
lib_fetch/: Cargo.toml  build.rs
lib_fetch/lib/: cpu.rs  de_wm.rs  gpu.rs  host.rs  kernel.rs  lib.rs  memory.rs  os.rs  package.rs  shell.rs  title.rs  uptime.rs
lib_fetch/test/: Cargo.toml
lib_fetch/test/src/: main.rs
src/: bin.rs  cpu.rs  desktop_environment.rs  distro.rs  gpu.rs  host.rs  kernel.rs  lib.rs  main.rs  memory.rs  packages.rs  resolution.rs  shell.rs  term.rs  test.rs  title.rs  uptime.rs
