[package]
name = "fetch"
version = "0.1.0"
authors = ["Whi73_W0lf <Wh173_W0lf@protonmail.com>"]

[dependencies]
lib_fetch = { path = "../lib_fetch"}

#[features]
#default = []
#arch = ["lib_fetch"]


#[dependencies.lib_fetch]
#default-features = false
#lib_fetch = { path = "../lib_fetch" }
#version = "*"
#path = "../lib_fetch"
#features = ["arch"]
#optional = true